<resources>
    <string name="app_name">Instagram</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <string name="back4app_app_id">XzTXVzbsqAb04lQJChVIRI72jXDWO69UchziWLd9</string>
    <string name="back4app_client_key">KRuYdUZxBMROq9ry2vXuX1emM15RzzQNgrnfs9Ux</string>
    <string name="incorrect">Incorrect user or password.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="description">Description…</string>
    <string name="post_image">Post image</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="post">Post</string>
    <string name="content">Content</string>
    <string name="text_favorites">Favorites</string>
    <string name="Home">Home</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">like</string>
    <string name="reply">Reply</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logo">Logo</string>
    <string name="forgot_your_login_details">Forgot your login details?</string>
    <string name="get_help_loggin_in">Get help loggin in.</string>
    <string name="or">OR</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="back">Back</string>
    <string name="comments">Comments</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="edit">edit</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="grid">grid</string>
    <string name="tags">tags</string>
    <string name="menu">menu</string>
    <string name="comment">comment</string>
    <string name="share">share</string>
    <string name="save">save</string>
    <string name="liked_by">Liked by</string>
    <string name="and">and</string>
</resources>