<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionHome"
        android:enabled="true"
        android:icon="@drawable/instagram_home_outline_24"
        android:iconTint="#FFFFFF"
        android:title="@string/Home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionPost"
        android:enabled="true"
        android:icon="@drawable/instagram_new_post_outline_24"
        android:iconTint="#FFFFFF"
        android:title="@string/post"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionProfile"
        android:enabled="true"
        android:icon="@drawable/instagram_user_outline_24"
        android:iconTint="#FFFFFF"
        android:title="@string/profile"
        app:showAsAction="always" />
</menu>