<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    tools:context=".fragments.PostFragment">

    <ImageView
        android:id="@+id/ivPost"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/post"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintDimensionRatio="1"
        app:srcCompat="@drawable/camera_shadow_fill"
        tools:src="@tools:sample/avatars"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivPost"
        android:layout_alignEnd="@+id/ivPost"
        android:layout_alignBottom="@+id/ivPost"
        android:layout_alignParentStart="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:padding="50dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivPost"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="#FFFFFF"
        android:textColorHint="#E3E0E0"
        tools:ignore="LabelFor"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etDescription"
        android:layout_alignStart="@+id/etDescription"
        android:layout_alignEnd="@+id/etDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"

        app:backgroundTint="#2196F3"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnPicture"
        android:layout_alignStart="@+id/btnPicture"
        android:layout_alignEnd="@+id/btnPicture"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"

        app:backgroundTint="#2196F3"
        android:text="@string/submit" />

</RelativeLayout>