<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark">

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePicture"
        tools:text="Esteban" />

    <TextView
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/tvUsername"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePicture"
        tools:text="This is a reply" />

    <TextView
        android:id="@+id/tvTimestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="#CDCDCD"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
        app:layout_constraintStart_toEndOf="@+id/ivProfilePicture"
        tools:text="22 h " />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/reply"
        android:textColor="#CDCDCD"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
        app:layout_constraintStart_toEndOf="@+id/tvTimestamp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/like"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/ivProfilePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivProfilePicture"
        app:srcCompat="@drawable/ufi_heart"
        app:tint="#CCCCCC" />
</androidx.constraintlayout.widget.ConstraintLayout>